type recognizer prototype