@@ -3,38 +3,39 @@ package org.agh.diskstalker.controllers;
 import javafx.fxml.FXML;
 import javafx.scene.control.TableColumn;
 import javafx.scene.control.TableView;
+import lombok.Getter;
 import net.rgielen.fxweaver.core.FxmlView;
+import org.agh.diskstalker.controllers.listeners.FilesTypeSelectedItemChangeListener;
 import org.agh.diskstalker.graphics.GraphicsFactory;
-import org.agh.diskstalker.model.statisctics.Type;
+import org.agh.diskstalker.model.stats.StatsEntry;
 import org.springframework.stereotype.Component;
+
+import java.util.List;
 
 @Component
 @FxmlView("/views/FilesTypeView.fxml")
 public class FilesTypeController extends AbstractTabController {
-    @FXML
-    private TableView<Type> dataTableView;
-    @FXML
-    private TableColumn<Type, Integer> quantityColumn;
-    @FXML
-    private TableColumn<Type, String> typeColumn;
+    @FXML @Getter private TableView<StatsEntry> dataTableView;
+    @FXML private TableColumn<StatsEntry, String> typeColumn;
+    @FXML private TableColumn<StatsEntry, Number> quantityColumn;
 
     public FilesTypeController(GraphicsFactory graphicsFactory) {
         super(graphicsFactory);
     }
 
     protected void configureSelectionModelListener() {
-//        foldersTableView.getSelectionModel().selectedItemProperty().addListener((observable, oldValue, newValue) -> {
-//            if(newValue != null) {
-//                dataTableView.setItems(newValue.getFilesTypeStatistics().getTypeStatistics());
-//                dataTableView.getSortOrder().addAll(Collections.singletonList(quantityColumn));
-//            } else {
-//                dataTableView.getItems().clear();
-//            }
-//        });
+        var selectionModel = foldersTableView.getSelectionModel();
+        selectionModel.selectedItemProperty().addListener(new FilesTypeSelectedItemChangeListener(this));
+    }
+
+    public void setSortOrder() {
+        dataTableView.getSortOrder().addAll(List.of(quantityColumn, typeColumn));
     }
 
     protected void prepareDataTableView() {
-        quantityColumn.setCellValueFactory(val -> val.getValue().getQuantityProperty().asObject());
-        typeColumn.setCellValueFactory(val -> val.getValue().getTypeProperty());
+        typeColumn.setCellValueFactory(node -> node.getValue().getTypeProperty());
+
+        quantityColumn.setSortType(TableColumn.SortType.DESCENDING);
+        quantityColumn.setCellValueFactory(node -> node.getValue().getLongProperty());
     }
 }
